# engram

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  add-firewall-rule.ps1  cli.ts  docker-compose.yml  engram-graph.html  engram-gui.html  engram-login.html  engram.service  import-opencode.py  install-service.ps1  landing.html  mcp-server.ts  megamind-gui.html  megamind-login.html  megamind-plugin.ts  openapi.yaml  package-lock.json  package.json  server-split.ts  server.ts  server.ts.bak  server.ts.v2.bak  split-routes.ts  sync.py  tsconfig.json  zanmemory-opencode.service
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: devto-fsrs-article.md  hn-comment-v2.md  hn-post.md  reddit-chatgptcoding.md  reddit-post-v2.md  reddit-singularity.md
examples/: langchain_memory.py
plugins/: engram.ts  megamind.ts
scripts/: engram-import-remote.py  engram-import.py  megamind-import-remote.py  megamind-import.py
sdk-py/: pyproject.toml
sdk-py/engram/: __init__.py
sdk-ts/: package.json  tsconfig.json
sdk-ts/src/: index.ts
sign/: index.ts  package.json
src/auth/: index.ts
src/config/: index.ts  logger.ts
src/db/: index.ts
src/embeddings/: index.ts
src/fsrs/: index.ts
src/gui/: index.ts
src/helpers/: index.ts
src/intelligence/: consolidation.ts  extraction.ts
src/llm/: index.ts
src/memory/: profile.ts  search.ts
src/platform/: digest.ts  webhooks.ts
src/routes/: index.ts
src/tier4/: causal.ts  predictive.ts  reconsolidation.ts  valence.ts
tests/: api.test.mjs  api.test.ts
