[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-sdk"
version = "1.0.0"
description = "Python SDK for Engram — persistent memory for AI agents"
readme = "README.md"
license = "Elastic-2.0"
requires-python = ">=3.9"
keywords = ["ai", "memory", "agents", "embeddings", "rag", "context", "llm"]
dependencies = ["httpx>=0.24"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://engram.lol"
Repository = "https://github.com/zanfiel/engram"
